--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,14 @@
     "app-plus" : {
         "usingComponents" : true,
         /* 5+App特有相关 */
-        "modules" : {},
+        "modules" : {
+            "Contacts" : {},
+            "Maps" : {},
+            "OAuth" : {},
+            "Payment" : {},
+            "Share" : {},
+            "VideoPlayer" : {}
+        },
         /* 模块配置 */
         "distribute" : {
             /* 应用发布信息 */
@@ -58,7 +65,7 @@
     },
     "h5" : {
         "router" : {
-			"mode" : "hash",
+            "mode" : "hash",
             "base" : "/glwd/"
         },
         "template" : "h5.template.html"
