--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,9 @@
             "Share" : {},
             "VideoPlayer" : {}
         },
+		"compatible" : {
+            "ignoreVersion" : true
+        },
         /* 模块配置 */
         "distribute" : {
             /* 应用发布信息 */
