--- a/manifest.json
+++ b/manifest.json
@@ -13,8 +13,7 @@
             "OAuth" : {},
             "Payment" : {},
             "Share" : {},
-            "VideoPlayer" : {},
-            "Maps" : {}
+            "VideoPlayer" : {}
         },
         "compatible" : {
             "ignoreVersion" : true
@@ -29,6 +28,7 @@
                     "<uses-feature android:name=\"android.hardware.camera.autofocus\"/>",
                     "<uses-permission android:name=\"android.permission.ACCESS_COARSE_LOCATION\"/>",
                     "<uses-permission android:name=\"android.permission.ACCESS_FINE_LOCATION\"/>",
+                    "<uses-permission android:name=\"android.permission.ACCESS_LOCATION_EXTRA_COMMANDS\"/>",
                     "<uses-permission android:name=\"android.permission.ACCESS_NETWORK_STATE\"/>",
                     "<uses-permission android:name=\"android.permission.ACCESS_WIFI_STATE\"/>",
                     "<uses-permission android:name=\"android.permission.CALL_PHONE\"/>",
@@ -96,8 +96,7 @@
     "quickapp" : {},
     /* 快应用特有相关 */
     "mp-weixin" : {
-        /* 小程序特有相关 */
-        "appid" : "",
+        "appid" : "wx95c98926c0ad4cae",
         "setting" : {
             "urlCheck" : false
         },
